--- a/src/components/AppointmentItem/index.css
+++ b/src/components/AppointmentItem/index.css
@@ -2,30 +2,76 @@
 
 .appointment-item {
   list-style-type: none;
-  border: 2px solid #b5b7c4;
+  border: 1px solid #b5b7c4;
   display: flex;
-  flex-direction: column;
   border-radius: 10px;
-  margin-right: 30px;
+  padding: 16px;
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .appointment-item {
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-bottom: 32px;
+    min-width: 297px;
+  }
 }
 
 .appointment-header-container {
   display: flex;
-  flex-direction: row;
+
   justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
-  min-width: 300px;
-  padding-bottom: 0px;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 14px;
 }
+.title-text {
+  color: #171f46;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0px;
+}
+
+@media screen and(min-width:768px) {
+  .title-text {
+    font-size: 18px;
+  }
+}
+
 .star-button {
   border: none;
   outline: none;
   background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+}
+.star {
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  align-self: center;
+  border: none;
+  outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .star {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .date-text {
-  margin-left: 20px;
-  color: #b5b7c4;
-  margin-top: 0px;
+  font-family: 'Roboto';
+  font-size: 12px;
+  margin: 0px;
+  color: #7e858e;
+}
+
+@media screen and (min-width: 768px) {
+  .date-text {
+    font-size: 16px;
+  }
 }
