--- a/src/components/Appointments/index.css
+++ b/src/components/Appointments/index.css
@@ -4,120 +4,189 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .appointment-bg-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
-  border-radius: 10px;
-  width: 80%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  border-radius: 12px;
+  width: 85%;
+  max-width: 550px;
+}
+@media screen and (min-width: 768px) {
+  .appointment-bg-container {
+    width: 78%;
+    max-width: 1120px;
+  }
 }
 
-.heading {
-  font-size: 30px;
-  font-weight: bold;
-  font-family: 'Roboto';
-}
-
-.appointment-container {
-  display: flex;
-  flex-direction: row;
-}
-.input-container {
+.appointments-container {
   display: flex;
   flex-direction: column;
-}
-.title-input {
-  border: 1px solid #171f46;
-  max-width: 200px;
-  margin-bottom: 10px;
-  padding-left: 10px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  min-width: 340px;
-  width: 100%;
+  justify-content: center;
+  align-items: center;
+  width: 86%;
+  max-width: 972px;
 }
 
-.date-input {
-  border: 1px solid #171f46;
-  max-width: 200px;
-  margin-bottom: 10px;
-  padding-left: 10px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  min-width: 340px;
+.add-appointment-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 64px;
+}
+.heading {
+  color: #171f46;
+  font-family: 'Roboto';
+  font-size: 22px;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+@media screen and(min-width:768px) {
+  .heading {
+    font-size: 32px;
+    margin-bottom: 48px;
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
   width: 100%;
 }
-.title {
-  color: #b5b7c4;
-  font-family: 'Roboto';
-  margin-bottom: 6px;
-  font-size: 15px;
-  font-weight: 500;
+@media screen and(min-width:768px) {
+  .form {
+    width: 45%;
+    max-width: 320px;
+  }
 }
 
 .label {
-  color: #b5b7c4;
+  color: #7e858e;
   font-family: 'Roboto';
-  margin-bottom: 6px;
   font-size: 15px;
   font-weight: 500;
+  margin-bottom: 8px;
+}
+
+.input {
+  color: #131415;
+  font-family: 'Roboto';
+  font-size: 12px;
+  border: 1px solid #7e858e;
+  padding-left: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-bottom: 24px;
+  outline: none;
+}
+
+@media screen and(min-width:768px) {
+  .input {
+    font-size: 14px;
+  }
 }
 
 .app-image {
-  margin-left: 100px;
-  width: 290px;
-  height: 250px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .app-image {
+    display: block;
+    width: 49%;
+  }
 }
 
 .add-button {
   background-color: #8b5cf6;
-  border-radius: 20px;
-  width: 50px;
+  align-self: flex-start;
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight: 500;
+  border-radius: 10px;
   border: none;
   outline: none;
-  cursor: pointer;
-  text-align: center;
-  color: #ffffff;
-  padding: 5px;
+
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .separator {
   border: 2px solid #b5b7c4;
   width: 100%;
+  margin-top: 25px;
+  margin-bottom: 32px;
 }
 
-.sub-heading {
-  font-size: 20px;
-  font-family: 'Roboto';
-  font-weight: 500;
-}
-.starred {
-  border: 1px solid #9897f0;
-  color: #9897f0;
-  font-family: 'Roboto';
-  border-radius: 10px;
-  outline: none;
-  font-size: 15px;
-  width: 80px;
-  height: 30px;
-  background-color: transparent;
-}
 .appointment-result-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  align-self: stretch;
+}
+
+@media screen and(min-width:768px) {
+  .appointment-result-container {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+.sub-heading {
+  font-size: 20px;
+  font-family: 'Roboto';
+  font-weight: 500;
+  color: #171f46;
+  margin: 0;
+}
+
+@media screen and(min-width:768px) {
+  .sub-heading {
+    font-size: 24px;
+  }
+}
+.filter-style {
+  font-weight: 600;
+  font-family: 'Roboto';
+  border-radius: 20px;
+  outline: none;
+  font-size: 15px;
+  border: none;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.filter-filled {
+  color: #ffffff;
+  background-color: #9897f0;
+}
+
+.filter-empty {
+  color: #9897f0;
+  background-color: white;
+  border: 1px solid #9897f0;
 }
 .appointments-list {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 0px;
+  margin-top: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .appointments-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
